<resources>
    <string name="app_name">K9_PxZ</string>
    <!-- Buttons GUI  -->
    <string name="btnFan1">FAN1</string>
    <string name="btnFan2">FAN2</string>
    <string name="btnFan3">FAN3</string>
    <string name="btnFan4">FAN4</string>
    <string name="btnFan5">FAN5</string>
    <string name="btnModule1">MODULE1</string>
    <string name="btnModule2">MODULE2</string>
    <string name="btnModule3">MODULE3</string>
    <string name="btnModule4">MODULE4</string>
    <string name="btnModule5">MODULE5</string>

    <string name="btnStart">start</string>
    <string name="btnStop">stop</string>

    <string name="btnProg_1">PROG1</string>
    <string name="btnProg_2">PROG2</string>
    <string name="btnProg_3">PROG3</string>

    <string name="btnPercussion">Percussion</string>
    <string name="btnVibration">Vibration</string>

    <string name="btnWakeUp">wakeup</string>
    <string name="btnSleep">sleep</string>


    <string name="btnSPFreq5">35</string>
    <string name="btnSPFreq4">30</string>
    <string name="btnSPFreq3">25</string>
    <string name="btnSPFreq2">20</string>
    <string name="btnSPFreq1">10</string>

    <string name="btnSPInt1">10</string>
    <string name="btnSPInt2">30</string>
    <string name="btnSPInt3">50</string>
    <string name="btnSPInt4">70</string>
    <string name="btnSPInt5">90</string>

    <string name="btnSPTime1">5</string>
    <string name="btnSPTime2">10</string>
    <string name="btnSPTime3">15</string>
    <string name="btnSPTime4">20</string>
    <string name="btnSPTime5">25</string>

    <!-- end Buttons  GUI-->

    <!-- TextView GUI  -->
    <string name="tvPageTitle">Percussion and Vibration</string>
    <string name="tvModule1">Module1</string>
    <string name="tvModule2">Module2</string>
    <string name="tvModule3">Module3</string>
    <string name="tvModule4">Module4</string>
    <string name="tvModule5">Module5</string>

    <string name="tvPosHead">Control</string>
    <string name="tvPosFoot">Modules</string>

    <string name="tv_Freq">Frequency</string>
    <string name="tv_Int">Intensity</string>
    <string name="tv_Time">Timer</string>

    <string name="tv_FreqFB">Frequency(Hz)</string>
    <string name="tv_IntFB">Intensity(%)</string>
    <string name="tv_TimeFB">Time(min)</string>

    <string name="tv_Mode">Mode:</string>
    <string name="tv_Zone">Zones Active:</string>
    <string name="tv_Remaind_time">Zones Active:</string>


    <!-- end TextView GUI  -->

    <!-- Radio buttons GUI  -->
    <string name="rbModule1A">A1</string>
    <string name="rbModule2A">A2</string>
    <string name="rbModule3A">A3</string>
    <string name="rbModule4A">A4</string>
    <string name="rbModule5A">A5</string>

    <string name="rbModule1B">B1</string>
    <string name="rbModule2B">B2</string>
    <string name="rbModule3B">B3</string>
    <string name="rbModule4B">B4</string>
    <string name="rbModule5B">B5</string>
    <string name="title_activity_therapy">TherapyActivity</string>

    <!-- Radio buttons GUI  -->
    <!-- Buttons GUI  -->
    <string name="button_screen_mode">Screen Mode</string>

    <!-- Language-->

    <string name="language_spain">Spain</string>
    <string name="language_france">France</string>
    <string name="language_US">US</string>

    <!-- Comunication -->
    <string name="ble_not_supported">BLE is not supported</string>

    <string name="ble_found">BLE found</string>
    <string name="ble_connected">BLE connected</string>
    <string name="ble_discovery_finished">BLE discovery finished</string>
    <string name="ble_disconnected_requested">BLE disconnected requested</string>
    <string name="ble_disconnected">BLE disconnected</string>
    <string name="error_bluetooth_not_supported">Error_bluetooth_not_supported</string>

    <!-- Cloud -->
    <string name="cloud_off">Cloud Off</string>
    <string name="cloud_upload">Cloud Upload</string>
    <string name="cloud_done">Cloud Done</string>

    <!-- Ethernet -->

    <string name="eth_connected">ETH connected</string>
    <string name="eth_disconnected">ETH disconnected</string>


    <!-- spinner -->
    <string name="spinner_title_freq">Frequency(HZ)</string>
    <string name="spinner_title_Int">Intensity(%)</string>
    <string name="spinner_title_Time">Time(min)</string>

    <!-- Alert Dialog -->
    <string name="alert_Title_uuid">New UUID:</string>
    <string name="alert_Title">To proceed:</string>
    <string name="alert_message">Confirm Side Rail are up.</string>
    <string name="alert_Title_com">Alert:</string>
    <string name="alert_message_com">Communication failed with K9-unit!.</string>
    <string name="alert_Title_Close_App">Alert:</string>
    <string name="alert_message_close_app">Are you sure you want to exit?</string>

    <!-- menu -->
    <string name="menu_cloud">Cloud</string>
    <string name="menu_Sound">Sound</string>
    <string name="menu_Voice">Voice</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_language">Select language</string>
    <string name="menu_manual">Manual</string>
    <string name="menu_about">About</string>


    <!-- MCU ERROR -->
    <string name="k9_i2c_error">Bus I2C error on K9</string>
    <string name="k9_mcu_error">MCU error on K9</string>

    <!-- strings for dialog -->
    <string name="string_permission_help">Help</string>
    <string name="string_permission_help_text">The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="string_permission_quit">Exit App</string>
    <string name="string_settings">Settings</string>
    <string name="string_dial_side_rail">Confirm that Siderails are Up Patient is Centered</string>
    <string name="string_dial_configuration">Check settings!</string>
    <string name="string_text_check_freq">Select frequency</string>
    <string name="string_text_check_tim">Select timer</string>
    <string name="string_text_check_int">Select intensity</string>
    <string name="string_text_check_transdA">Select R(Right) modules or</string>
    <string name="string_text_check_transdB">Select L(Left) modules</string>
    <string name="string_name_therapy_complete">Therapy complete.</string>
    <string name="string_name_therapy">FULL BODY PERCUSSION/VIBRATION THERAPY</string>
    <string name="string_name_percussion_therapy">Percussion Therapy</string>
    <string name="string_name_btn_main" translatable="false">K-9</string>
    <string name="string_name_select_perc">Percussion</string>
    <string name="string_name_select_vib">Vibration</string>

    <string name="string_name_select_total_perc">Full chest Percussion</string>
    <string name="string_name_select_total_vib">Full body Vibration</string>

    <string name="string_name_lock">Are you sure?</string>

    <!-- name button dialog siderail -->
    <string name="string_btn_SR_confirm">Confirm</string>
    <string name="string_btn_SR_cancel">Cancel</string>

    <string name="string_text_pres_start">Press to start.</string>
    <string name="string_text_lost_connection">Connection lost!</string>
    <string name="string_text_lost_connection_code">Error code 1001</string>

    <!-- name auto sleep mode -->
    <string name="string_sleep_question">Are you still there?</string>

    <!-- main screen  button -->
    <string name="string_text_main_manual">Manual</string>
    <string name="string_text_main_lock">Lock</string>
    <string name="string_text_main_unlock">unlock</string>
    <string name="string_text_main_sleep">Sleep</string>

    <!-- percussion and vibration screen  button -->
    <string name="string_text_pv__btn_main">Main</string>
    <string name="string_text_pv_tv_minsec">min:sec</string>
    <string name="string_text_pv_tv_freq">Frequency</string>
    <string name="string_text_pv_tv_tim">Time(min)</string>

    <!-- sleep screen  button -->
    <string name="string_text_btn_sleep">wake-up</string>

    <!-- dialog loading screen  button -->
    <string name="string_text_dial_stoping">System is stopping! Please wait.&quot;</string>
    <string name="string_text_dial_loading">System is loading! Please wait.&quot;</string>

    <string name="string_text_dial_enter_pass">Enter password : </string>
    <string name="string_text_burning_done">Burning all done!&quot;</string>
    <string name="string_text_burning_failed">Burning failed!&quot;</string>

    <!-- start button -->
    <string name="string_text_btn_start">Start</string>
    <string name="string_text_btn_running">Running</string>
    <string name="string_text_btn_stopped">Stopped</string>
    <string name="string_text_btn_ready">Ready</string>
    <string name="string_text_btn_lock">Lock</string>
    <!-- lock actions  -->
    <string name="string_text_action_locked">Locked</string>
    <string name="string_text_action_unlocked">Unlocked</string>

    <!-- home button  -->
    <string name="string_text_home">Home</string>
    <!-- spare text-->
    <string name="string_text_spare1" translatable="false">spare</string>
    <string name="string_text_spare2" translatable="false">spare</string>
    <string name="string_text_spare3" translatable="false">spare</string>
    <string name="string_text_spare4" translatable="false">spare</string>
    <string name="string_text_spare5" translatable="false">spare</string>
    <string name="string_text_spare6" translatable="false">spare</string>
    <string name="string_text_spare7" translatable="false">spare</string>
    <string name="string_text_spare8" translatable="false">spare</string>
    <string name="string_text_spare9" translatable="false">spare</string>
    <string name="string_text_spare10" translatable="false">spare</string>

    <!-- setting page -->
    <string name="string_sett_link">Update</string>
    <string name="string_sett_burning">Burning</string>
    <string name="string_sett_About">About</string>
    <string name="string_sett_system">System</string>
    <string name="string_sett_title">Settings</string>
    <string name="string_sett_hard">Hardware</string>
    <string name="string_software_update">Software Update</string>

    <!-- alarms -->
    <string name="string_alarm_emergency_stop">Error code:25 </string>
    <string name="string_alarm_hardware_fail">Error code:27. Restart system! </string>

    <string name="string_alarm_under_current">Error code:95(UC). Check all connections! </string>
    <string name="string_alarm_over_current">Error code:94(OC). Should stop system!!! </string>

    <!-- connection page -->
    <string name="string_com_connected">Connected</string>
    <string name="string_com_discconnected">Disconnected</string>

    <!-- module -->
    <string name="string_mod_right">RIGHT</string>
    <string name="string_mod_left">LEFT</string>

    <!-- language translation-->
    <string-array name="language_option">
        <item>English(en)</item>
        <item>Deutsch(de)</item>
        <item>français(fr)</item>
        <item>Italiano(it)</item>
        <item>Español(es)</item>
    </string-array>
    <string name="string_text_pv_tv_int">Intensity</string>

    <!-- K750 -->
    <string name="string_k750_title">HOSPITAL BED FRAME</string>
    <string name="string_k750_main_btn">K750</string>

</resources>