<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/colorBlueGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnManual"

                android:layout_width="@dimen/dim_btn_bar_W"
                android:layout_height="@dimen/dim_btn_bar_H"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:background="@drawable/btn_roundr_corner"
                android:drawableTop="@drawable/ic_baseline_video_file_32"
                android:padding="5dp"

                android:text="@string/string_text_main_manual"
                android:textColor="@color/black"
                android:textSize="@dimen/dim_text_bar_main"
                app:layout_constraintBottom_toBottomOf="@+id/btnMainLock"
                app:layout_constraintEnd_toStartOf="@+id/btnMainLock"
                app:layout_constraintTop_toTopOf="@+id/btnMainLock"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/btnMainSllep"
                android:layout_width="@dimen/dim_btn_bar_W"
                android:layout_height="@dimen/dim_btn_bar_H"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:background="@drawable/btn_roundr_corner"
                android:drawableTop="@drawable/ic_baseline_nightlight_32"
                android:padding="5dp"
                android:text="@string/string_text_main_sleep"
                android:textColor="@color/black"
                android:textSize="@dimen/dim_text_bar_main"
                app:layout_constraintBottom_toBottomOf="@+id/btnMainLock"
                app:layout_constraintStart_toEndOf="@+id/btnMainLock"
                app:layout_constraintTop_toTopOf="@+id/btnMainLock" />

            <Button
                android:id="@+id/btnMainSet"
                android:layout_width="80dp"
                android:layout_height="@dimen/dim_btn_bar_H"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/ic_baseline_menu_48"
                android:elevation="5dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnMainLock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnMainLock"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                tools:text="." />

            <Button
                android:id="@+id/btnMainLock"
                android:layout_width="@dimen/dim_btn_bar_W"
                android:layout_height="@dimen/dim_btn_bar_H"
                android:layout_weight="1"
                android:background="@drawable/btn_roundr_corner"
                android:drawableTop="@drawable/ic_baseline_lock_32"
                android:padding="5dp"
                android:text="@string/string_text_main_lock"
                android:textColor="@color/black"
                android:textSize="@dimen/dim_text_bar_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnMainSet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnMainK9"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="@drawable/btn_main"
        android:drawableBottom="@drawable/ic_baseline_lock_open_48"
        android:elevation="10dp"
        android:padding="30dp"
        android:text="@string/string_name_btn_main"
        android:textColor="@color/colorBlueGrey"
        android:textSize="@dimen/dim_text_btn_main"
        app:layout_constraintBottom_toTopOf="@+id/spinnerLang"
        app:layout_constraintEnd_toEndOf="@+id/tvTherapyName"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/tvTherapyName"
        app:layout_constraintTop_toBottomOf="@+id/tvTherapyName" />

    <TextView
        android:id="@+id/tvTherapyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/string_name_therapy"
        android:textAllCaps="true"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="169dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRev"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo_kap" />

    <TextView
        android:id="@+id/tvRev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Rev:2.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="@dimen/dim_icon_logoa_W"
        android:layout_height="@dimen/dim_icon_logoa_H"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/iturn" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="@dimen/dim_icon_logo_W"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTherapyName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@drawable/iturna" />

    <Spinner
        android:id="@+id/spinnerLang"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/tvDatem"
        app:layout_constraintStart_toEndOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_language_24" />

    <TextView
        android:id="@+id/tvScreenStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_text_action_unlocked"
        android:textColor="#FF8A65"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9" />

    <TextView
        android:id="@+id/tvDatem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="mm/dd/yy HH:mm:ss"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:text="@string/string_k750_title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTherapyName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTherapyName" />

    <Button
        android:id="@+id/btnMainK750"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_main"
        android:drawableBottom="@drawable/ic_baseline_lock_open_48"
        android:elevation="10dp"
        android:padding="30dp"
        android:text="@string/string_k750_main_btn"
        android:textColor="@color/colorBlueGrey"
        android:textSize="@dimen/dim_text_btn_main"
        app:layout_constraintBottom_toBottomOf="@+id/btnMainK9"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/btnMainK9" />


</androidx.constraintlayout.widget.ConstraintLayout>